@@ -429,6 +429,7 @@ namespace Graphics::GUI
 						"EMPTY",
 						false,
 						1.0f,
+						32.0f,
 						targetName,
 						nextID);
 
@@ -458,6 +459,7 @@ namespace Graphics::GUI
 						"EMPTY",
 						false,
 						1.0f,
+						32.0f,
 						targetName,
 						nextID);
 
@@ -487,6 +489,7 @@ namespace Graphics::GUI
 						"EMPTY",
 						false,
 						1.0f,
+						32.0f,
 						targetName,
 						nextID);
 
@@ -516,6 +519,7 @@ namespace Graphics::GUI
 						"EMPTY",
 						false,
 						1.0f,
+						32.0f,
 						targetName,
 						nextID);
 
@@ -545,6 +549,7 @@ namespace Graphics::GUI
 						"EMPTY",
 						false,
 						1.0f,
+						32.0f,
 						targetName,
 						nextID);
 
